# cookiecutter-fullstack-django-vue3

./: .gitignore  README.md  cookiecutter.json  mutable-mapping-pelican.md  plan-migrate-pip2uv.md
{{ cookiecutter.project_slug }}/: .dockerignore  .editorconfig  .env.development  .gitignore  .gitlab-ci.yml  .modules.yaml  .pre-commit-config.yaml  Makefile  README.md  TECHSTACK-backend.md  TECHSTACK-frontend.md  TECHSTACK.md  celeryd-venv.sh  ci_e2c_build_script.sh  ci_e2c_manager.sh  ci_latest_manager.sh  ci_latest_manager2.sh  ci_merge_manifests.sh  deploy.sh  deploy.yml  docker-bake-production.hcl  docker-bake-staging.hcl  docker-bake-test.hcl  docker-compose-remote.sh  docker-local_bake-production.hcl  docker-local_bake-staging.hcl  local.yml  mkdocs.yml  production.yml  pyproject.toml  pytest.ini  setup.cfg  test-ci.yml
{{ cookiecutter.project_slug }}/.envs/.local/: .django
{{ cookiecutter.project_slug }}/.envs/.local-venv/: .django
{{ cookiecutter.project_slug }}/.envs/.production/: .django  .django.asparuha
{{ cookiecutter.project_slug }}/.envs/.test/: .django
{{ cookiecutter.project_slug }}/backend_django/: apps.py  celery-venv.conf  conftest.py  manage.py  models.py  pyproject.toml  pytest.ini  runserver.sh  setup.cfg  tasks.py  urls.py
{{ cookiecutter.project_slug }}/backend_django/api/: urls.py  views.py
{{ cookiecutter.project_slug }}/backend_django/config/: api_router.py  celery_app.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/backend_django/fixtures/: dev_preseed-testuser.json
{{ cookiecutter.project_slug }}/backend_django/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/backend_django/requirements/: base.txt  local.txt  production.txt
{{ cookiecutter.project_slug }}/backend_django/site_config/: apps.py  models.py
{{ cookiecutter.project_slug }}/backend_django/templates/: 403.html  404.html  500.html  base.html  home.html  test.html
{{ cookiecutter.project_slug }}/backend_django/test/: test_wakeup.py
{{ cookiecutter.project_slug }}/backend_django/users/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py
{{ cookiecutter.project_slug }}/backend_django/utils/: misc
{{ cookiecutter.project_slug }}/cert/: cert.pem  key.pem
{{ cookiecutter.project_slug }}/config/: celery_app.py
{{ cookiecutter.project_slug }}/config/settings/: base.py  local.py  production.py
{{ cookiecutter.project_slug }}/docker/django/: seed_fixtures.sh
{{ cookiecutter.project_slug }}/docs/: conf.py  index.md  make.bat
{{ cookiecutter.project_slug }}/docs/_source/: howto.rst  index.rst
{{ cookiecutter.project_slug }}/docs/backend/: celery.md  django.md
{{ cookiecutter.project_slug }}/docs/development/: docker.md  environment.md  local-venv.md  workflows.md
{{ cookiecutter.project_slug }}/docs/devops/: cicd.md  deployment.md  docker-production.md  integration.md  security.md
{{ cookiecutter.project_slug }}/fixtures/: preseed-user.json
{{ cookiecutter.project_slug }}/frontend_vue/: .env  .env.development  .env.production  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
{{ cookiecutter.project_slug }}/frontend_vue/src/: Main.vue  (+3 more)
{{ cookiecutter.project_slug }}/requirements/: base.txt  local.txt  production.txt
(+75 files in other folders)
