[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.email }}" }
]

dependencies = [
    # Django and related
    "Django>=5.0",
    "django-environ>=0.12.0",
    "django-model-utils>=4.3.1",
    "django-allauth[socialaccount]>=64.0.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.0",
    "django-cors-headers>=4.6.0",
    "django-celery-beat>=2.8.1",
    "dj-rest-auth>=6.0.0",
    "django-modeltranslation>=0.19.16",
    "django_vite>=3.1.0",
    "whitenoise>=5.3.0",

    # Database
    "psycopg>=3.2.9",

    # Celery
    "celery>=5.5.3",
    "flower>=2.0.1",

    # Redis
    "redis>=6.2.0",
    "hiredis>=3.2.1",

    # Utilities
    "pre-commit>=4.0.1",
    "pytz>=2021.3",
    "python-slugify>=5.0.2",
    "Pillow>=11.0.0",
    "cryptography>=45.0.2",
    "argon2-cffi>=21.3.0",
]

[project.optional-dependencies]
dev = [
    # Debugging
    "Werkzeug>=2.2.0",
    "ipdb>=0.13.3",
    "pyOpenSSL>=25.1.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-django>=4.9.0",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=0.9.5",
    "factory-boy>=3.2.1",
    # Type checking
    "mypy>=1.14.0",
    "django-stubs>=1.12.0",
    # Code quality
    "black>=24.0.0",
    "ruff>=0.8.0",
    "flake8>=5.0.4",
    "flake8-isort>=4.2.0",
    "coverage>=6.4.2",
    "pylint-django>=2.5.3",
    "pylint-celery>=0.3",
    # Django dev
    "django-debug-toolbar>=4.2",
    "django-extensions>=3.2.3",
    "django-coverage-plugin>=2.0.3",
]

test = [
    "pytest>=8.0.0",
    "pytest-django>=4.9.0",
    "factory-boy>=3.2.1",
]

production = [
    "gunicorn>=23.0.0",
    "django-anymail[mailgun]>=10.2",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend_django"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    | docs
    | node_modules
    | migrations
    | .git
    | .tox
    | .venv
    | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".tox",
    ".venv",
    "__pycache__",
    "docs",
    "node_modules",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "backend_django.config.settings.test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "migrations",
    "docs",
    ".venv",
]
